syntax="proto3";

option go_package = "./proto";

package counter;


service InitService {
    rpc CheckInitState (InitRequest) returns (InitResponse);
    
}

service LogService {
    rpc IssueCounter (ReplicaRequest) returns (ReplicaResponse);
}

message InitRequest{
    int64 index = 1;
}

message InitResponse{
    int64 persisted_counter = 1; 
    int64 issued_counter = 2;
};

message ReplicaRequest{
    int64 issued_counter = 1;
};

message ReplicaResponse{
    int64 stored_counter = 1;
};

 